# haemodialysis-anonymize

./: .gitignore  README.md  balances.xlsx  pyproject.toml  setup.py
anonymize/: __init__.py
anonymize.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
anonymize/anonymize.egg-info/: SOURCES.txt
src/: __init__.py  main.py
