[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "anonymize"
version = "1.0.0"
authors = [
  { name="Federico Tarascio", email="fe.tarascio@gmail.com" },
]
description = "TODO"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  'openpyxl >= 3.1.2',
  'xlrd >= 2.0.1'
]
